--- a/index.html
+++ b/index.html
@@ -1,63 +1,90 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - Instant photo film galerie</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <title>Feliz dia dos namorados</title>
+    <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<div class="Container">
-  <!-- last card -->
-  <div class="Picture-video" id="video">
-    <iframe class="Picture-img-video" width="300" height="480"  src="video/Play it ♥️🦋.mp4" frameborder="0" allowfullscreen></iframe>
-    <div class="Picture-note-video"><span>@DeveloperRahul - <a class="Network-video" href="https://codepen.io/DeyJordan" target="_top"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111501.png" alt="CodePen" /></a><a class="Network" href="https://twitter.com/DeyJordan" target="_top"><img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" alt="twitter" /></a></span></div>
-  </div>
-  <!-- other cards -->
-  <div class="Picture">
-    <img class="Picture-img" src="images/10.png" alt="" />
-    <div class="Picture-note"><span>Over the clouds</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/9.png" alt="" />
-    <div class="Picture-note"><span>Golden Gate Bridge - San Francisco</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/8.png" alt="" />
-    <div class="Picture-note"><span>Cat nose</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/7.png" alt="" />
-    <div class="Picture-note"><span>Mountain</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/6.png" alt="" />
-    <div class="Picture-note"><span>Central Park - New York</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/5.png" alt="" />
-    <div class="Picture-note"><span>Autumn</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/4.png" alt="" />
-    <div class="Picture-note"><span>Coffee</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/3.png" alt="" />
-    <div class="Picture-note"><span>An Irish cow enjoying the wind on the beach</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/2.png" alt="" />
-    <div class="Picture-note"><span>pelicans at the water's edge</span></div>
-  </div>
-  <div class="Picture">
-    <img class="Picture-img" src="images/1.png" alt="" />
-    <div class="Picture-note"><span>Waterfall</span></div>
-  </div>
-</div>
-<!-- partial -->
-  <script  src="./script.js"></script>
+    <!-- partial:index.partial.html -->
+    <div class="Container">
+        <!-- last card -->
+        <div class="Picture-video" id="video">
+            <iframe class="Picture-img-video" width="300" height="480" src="video/video.mp4" frameborder="0"
+                allowfullscreen></iframe>
+            <div class="Picture-note-video"><span>@Desenvolvedor - <a class="Network-video"
+                        href="https://github.com/LuizinhoVI" target="_top"><img
+                            src="https://cdn-icons-png.flaticon.com/512/2111/2111501.png" alt="CodePen" /></a></span>
+            </div>
+        </div>
+        <!-- other cards -->
+        <div class="Picture">
+            <img class="Picture-img" src="images/14.webp" alt="" />
+            <div class="Picture-note"><span>Seu amor me completa de uma maneira indescritível</span></div>
+        </div>
+        <div class="Picture">
+            <video class="Picture-img" src="images/13.mp4" autoplay loop alt=""> </video>
+            <div class="Picture-note"><span>Você é o meu porto seguro, em todos os momentos</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/12.jpg" alt="" />
+            <div class="Picture-note"><span>Nosso amor é a melhor história que já vivi</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/11.jpg" alt="" />
+            <div class="Picture-note"><span>Meu amor por você só cresce a cada dia</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/10.jpg" alt="" />
+            <div class="Picture-note"><span>Você é o motivo do meu sorriso diário</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/9.jpg" alt="" />
+            <div class="Picture-note"><span>Golden Gate Bridge - San Francisco</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/8.jpg" alt="" />
+            <div class="Picture-note"><span>Ao seu lado, o tempo voa</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/7.jpg" alt="" />
+            <div class="Picture-note"><span>Seu sorriso derrete meu coração</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/6.webp" alt="" />
+            <div class="Picture-note"><span>Com você, cada momento é mágico</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/5.jpg" alt="" />
+            <div class="Picture-note"><span>Você é a pessoa dos meus sonhos</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/4.webp" alt="" />
+            <div class="Picture-note"><span>Seu abraço é o meu lugar favorito</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/3.jpg" alt="" />
+            <div class="Picture-note"><span>Você faz meu coração sorrir</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/2.jpg" alt="" />
+            <div class="Picture-note"><span>Você é a luz que ilumina meus dias.</span></div>
+        </div>
+        <div class="Picture">
+            <img class="Picture-img" src="images/1.webp" alt="" />
+            <div class="Picture-note"><span>Meu amor por você é infinito.</span></div>
+        </div>
+        "Meu amor por você é infinito."
+        "."
+        "."
+        "."
+    </div>
+    <!-- partial -->
+    <script src="./script.js"></script>
 
 </body>
+
 </html>
