--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="Container">
         <!-- last card -->
         <div class="Picture-video" id="video">
-            <iframe class="Picture-img-video" width="300" height="480" src="video/video.mp4" frameborder="0"
-                allowfullscreen></iframe>
+            <video class="Picture-img-video" play autoplay loop width="300" height="480" src="video/video.mp4" frameborder="0"
+                allowfullscreen></video>
             <div class="Picture-note-video"><span>@Desenvolvedor - <a class="Network-video"
                         href="https://github.com/LuizinhoVI" target="_top"><img
                             src="https://cdn-icons-png.flaticon.com/512/2111/2111501.png" alt="CodePen" /></a></span>
