--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="Container">
         <!-- last card -->
         <div class="Picture-video" id="video">
-            <video class="Picture-img-video" play autoplay loop width="300" height="480" src="video/video.mp4" frameborder="0"
-                allowfullscreen></video>
+
+            <iframe class="Picture-img-video" autoplay width="560" height="315"
+                src="https://www.youtube.com/embed/82tt41H-UKE" title="YouTube dia dos namorados player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="Picture-note-video"><span>@Desenvolvedor - <a class="Network-video"
                         href="https://github.com/LuizinhoVI" target="_top"><img
                             src="https://cdn-icons-png.flaticon.com/512/2111/2111501.png" alt="CodePen" /></a></span>
